kubernetes/apps/home/raspberry-pi-server/basement/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: raspberry-pi-server-basement
  namespace: home
spec:
  ports:
    - port: 5000
      protocol: TCP
  selector:
    app:  raspberry-pi-server-basement
